--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,11 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/config/database.yml
+/db/seeds.rb
+/config/environments/development.rb
+/config/environments/production.rb
+/config/environments/test.rb
+/config/secrets.yml
+/config/initializers/recaptcha.rb
