--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@
 /config/environments/production.rb
 /config/environments/development.rb
 /config/database.yml
+/config/secrets.yml
+/config/initializers/recaptcha.rb
 
 localhost.crt
 localhost.key
